Fix for 2 line in menu, menu for cities, 4 lines in blogs

--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -12,13 +12,13 @@
 				%li
 					%a{ :href => "#"}
 						%span.lIm
-							%span.liName
-								Новосибирск
+						%span.liName
+							Новосибирск
 				%li
 					%a{ :href=>"#"}
 						%span.lIm
-							%span.liName
-								Москва
+						%span.liName
+							Москва
 		.franch{:tabindex=>"1"}
 			%span.topElementCompanyFranch
 			%a{:href=>"#"}
@@ -90,13 +90,13 @@
 						%span.topElement-inner
 							Ремонт
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
-				.menu-content
+			.dropdown.dropdown-menu.level0
+				%ul.menu-content
 					%li
 						%a{:href=>"#"}
 							%span.lIm
 							%span.liName
-								Ремонт кондиционера
+								Ремонт кондиционера Remont condicionera Test
 					%li
 						%a{:href=>"#", :tabindex => "-1"}
 							%span.lIm
@@ -136,7 +136,7 @@
 						%span.topElement-inner
 							Диагностика
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
+			.dropdown.dropdown-menu.level0
 				.menu-content
 		.menu-element
 			.dd.wrapper-dropdown-2.element{:tabindex=>"1"}
@@ -146,7 +146,7 @@
 						%span.topElement-inner
 							Плановое&nbsp;ТО
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
+			.dropdown.dropdown-menu.level0
 				.menu-content
 		.menu-element
 			.dd.wrapper-dropdown-2.element{:tabindex=>"1"}
@@ -156,7 +156,7 @@
 						%span.topElement-inner
 							Установка оборудования
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
+			.dropdown.dropdown-menu.level0
 				.menu-content
 					%li
 						%a{:href=>"#"}
@@ -171,7 +171,7 @@
 						%span.topElement-inner
 							Шиномонтаж
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
+			.dropdown.dropdown-menu.level0
 				.menu-content
 					%li
 						%a{:href=>"#"}
@@ -186,7 +186,7 @@
 						%span.topElement-inner
 							Наш&nbsp;сервис
 						%span.round-end
-			%ul.dropdown.dropdown-menu.level0
+			.dropdown.dropdown-menu.level0
 				.menu-content
 					%li
 						%a{:href=>"#"}
