--- a/source/one_news.html.haml
+++ b/source/one_news.html.haml
@@ -76,7 +76,9 @@
 				.date
 					26 мая 2013
 				%a{:href => '#'}
-					открыт premium филиал в&nbsp;караганде
+					открыт premium филиал в караганде
+					открыт premium филиал в караганде
+					открыт premium филиал в караганде
 
 			%li.blog-elem
 				%a{:href => '#'}
