--- a/source/stylesheets/lib/_dropdown.css.sass
+++ b/source/stylesheets/lib/_dropdown.css.sass
@@ -148,12 +148,12 @@ ul.dropdown.second-column
 	-moz-border-left-widht: 0
 	background-color: #ffffff
 
-div.menu-element ul.dropdown-menu
+div.menu-element .dropdown-menu
 	box-shadow: none
 	-webkit-box-shdow: none
 	-moz-box-shadow: none
 	top: 120%
-div.menu-element ul.dropdown-menu.no-border
+div.menu-element .dropdown-menu.no-border
 	border-right-width: 0
 	-webkit-border-right-widht: 0
 	-moz-border-right-widht: 0
@@ -174,11 +174,11 @@ div.menu-element ul.dropdown-menu.no-border
 	background: url('../img/headerMenuRight.png') no-repeat
 
 
-div.wrapper-dropdown-top ul.dropdown-menu
+div.wrapper-dropdown-top .dropdown-menu
 	box-shadow: none
 	-webkit-box-shdow: none
 	-moz-box-shadow: none
-div.wrapper-dropdown-top ul.dropdown-menu.no-border
+div.wrapper-dropdown-top .dropdown-menu.no-border
 	border-right-width: 0
 	-webkit-border-right-widht: 0
 	-moz-border-right-widht: 0
