--- a/source/stylesheets/lib/_header_ie.css.sass
+++ b/source/stylesheets/lib/_header_ie.css.sass
@@ -6,7 +6,7 @@
           .topElement
             top: -4px !important
             text-decoration: none
-        div.menu-element ul.dropdown-menu
+        div.menu-element .dropdown-menu
           top: 98%
 
 .lt-ie9
@@ -38,5 +38,5 @@
           cursor: pointer
         .topElement
           top: 16px
-      div.menu-element ul.dropdown-menu
+      div.menu-element .dropdown-menu
         top: 120%
