--- a/source/stylesheets/lib/ie_one_news.css.sass
+++ b/source/stylesheets/lib/ie_one_news.css.sass
@@ -8,6 +8,7 @@
     width: 131px
     height: 18px
     text-align: center
+    box-sizing: content-box
     padding:
       left: 5px
       right: 5px
