--- a/source/stylesheets/lib/one_news.css.sass
+++ b/source/stylesheets/lib/one_news.css.sass
@@ -102,7 +102,9 @@ $color_white: #fff
 	> *
 		display: inline-block
 	> div
-		width: 20%
+		position: relative
+		top: 5px
+		width: 15%
 	script
 		display: none !important
 
@@ -115,11 +117,13 @@ $color_white: #fff
 		margin-bottom: 20px
 
 .blogs_wrapper
+	.blog-elem
+		text-transform: uppercase
 	.jcarousel-skin-tango
 		.jcarousel-container-horizontal
 			padding: 20px 5px
 		.jcarousel-clip-horizontal
-			height: 240px
+			height: 248px
 		.jcarousel-prev-horizontal
 			top: 80px
 			left: -3px
