--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -197,6 +197,11 @@
 	padding-left: 6px
 	margin-top: -10px
 
+.menu-content
+	list-style: none
+	margin: 0
+	padding: 0
+
 .menu-element
 	.topElement
 		padding: 0 19px 0 6px
