.active_page that copy a .hover

--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -138,7 +138,7 @@
 						%span.round-end
 			.dropdown.dropdown-menu.level0
 				.menu-content
-		.menu-element
+		.menu-element.active_page
 			.dd.wrapper-dropdown-2.element{:tabindex=>"1"}
 				%a{:href => '#'}
 					%span.topElementMenuTO
