--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -225,7 +225,7 @@
 	span.round-end
 		background: url(../images/menu_element_active_round_end.png) no-repeat
 
-.menu-element.hover
+.menu-element.hover, .menu-element.active_page
 	.topElement-inner
 		background: url(../images/menu_elem_active_background.png) repeat-x
 	span.round-end
