Border radius on circles - not in ie and history browsers

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -2,23 +2,23 @@
 	.carousel
 		%ul#mycarousel.jcarousel-skin-tango
 			%li
-				%img{:src=>"img/carousel/1b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/2b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/3b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/4b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/5b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/6b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/7b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/8b.png"}
+				%img{:src=>"img/carousel/7.png"}
 			%li
-				%img{:src=>"img/carousel/9b.png"}
+				%img{:src=>"img/carousel/7.png"}
 	.footerData.whiteFont
 		.footerMenuElement
 			.footerMenuElementMiddle
