--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -30,7 +30,7 @@
     %link(rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/apple-touch-icon-57x57-precomposed.png")
     %link(rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72x72-precomposed.png")
     %link(rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114x114-precomposed.png")
-    
+
     -# Stylesheets
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/main.css'}
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/ptsans_bold.css'}
@@ -39,6 +39,7 @@
 
     /[if IE]
       %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/main_ie.css'}
+      %script{:type => 'text/javascript', :src => 'stylesheets/ie_htcs/PIE.js'}
 
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.bxslider.js'}
