--- a/source/stylesheets/lib/_footer.css.sass
+++ b/source/stylesheets/lib/_footer.css.sass
@@ -10,7 +10,7 @@
 	bottom: 325px
 	z-index: 2
 	
-#footer .footerData 
+#footer .footerData
 	position: absolute
 	z-index: 1
 	width: 100%
@@ -18,18 +18,18 @@
 	bottom: 60px
 	background: #f27d32
 	
-#footer .bottomContacts 
+#footer .bottomContacts
 	position: absolute
 	width: 100%
 	height: 60px
 	bottom: 0
 	
-#footer .bottomContacts .copy 
+#footer .bottomContacts .copy
 	padding-top: 25px
 	padding-left: 10px
 	color: #8c8284
 	
-#footer .footerData .footerTel 
+#footer .footerData .footerTel
 	position: absolute
 	bottom: 0
 	right: 0
@@ -38,7 +38,7 @@
 	background: url('../img/footerTel.png') no-repeat
 	
 
-#footer .footerData .siteMap 
+#footer .footerData .siteMap
 	position: absolute
 	bottom: 20px
 	right: 580px
@@ -188,3 +188,8 @@
 		float: right
 		margin-right: 20px
 		margin-top: 35px
+	.jcarousel-item
+		img
+			border-radius: 50px
+			-moz-border-raduis: 50px
+			border: 2px solid #ed4d30
